syntax = "proto3";
package zetachain.zetacore.zetacore;

option go_package = "github.com/zeta-chain/zetacore/x/zetacore/types";

import "gogoproto/gogo.proto";

message GasPrice {
  string creator = 1;
  string index = 2;
  string chain = 3;
  repeated string signers = 4 ;
  repeated uint64 blockNums = 5;
  repeated uint64 prices = 6;
  uint64 medianIndex = 7;
}
